# singsing

./: .gitignore  CMakeLists.txt  README.md  build-deps.sh  build.sh  dl.sh  env.sh  notes.txt
cmake/: FindAubio.cmake  FindFreetypeGL.cmake  FindProjectM.cmake  FindSoundIO.cmake  Findaubio.cmake  toolchain-mingw64.cmake
docker/: Dockerfile.in  dockerenv.sh  entrypoint.sh  install-ubuntu.sh  run
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
libmpv/: fpscounter.c  fpscounter.h  main.c
platform/macos/: Info.plist
shaders/: frag.330.glsl  frag.glsl  ftgl.frag.330.glsl  ftgl.vert.330.glsl  mviz.frag.glsl  mviz.geom.glsl  mviz.vert.glsl  vert.330.glsl  vert.glsl
src/: app.cpp  app.hpp  font.hpp  main.cpp  mpv.cpp  mpv.hpp  musicvisualizer.hpp  projectmrenderer.hpp  shader.hpp  song.cpp  song.hpp
src/base/: fs.hpp  record.hpp  ringbuffer.hpp  texture.cpp  texture.hpp
src/lib/yin/: yin.cpp  yin.hpp
src/util/: fpscounter.cpp  fpscounter.hpp  glframebuffer.hpp  glprogram.cpp  glprogram.hpp  glutils.cpp  glutils.hpp
